# pyramid-tasks

./: LICENSE  Makefile  README.md  pyproject.toml  pyramid_tasks.py  setup.cfg  setup.py
.github/workflows/: publish.yml  tests.yml
examples/basic/: README.md  config.ini  docker-compose.yml  setup.py
examples/basic/basicapp/: __init__.py  __main__.py  celery.py
examples/beat/: Dockerfile  README.md  config.ini  docker-compose.yml  setup.py
examples/beat/beatapp/: __init__.py
examples/sqlalchemy/: README.md  config.ini  setup.py
examples/sqlalchemy/sqlalchemyapp/: __init__.py  tasks.py  views.py
examples/sqlalchemy/sqlalchemyapp/models/: __init__.py  ledger.py  meta.py
pyramid_tasks/: __init__.py  celery.py  events.py  interfaces.py  settings.py  taskderivers.py  transaction.py  tweens.py
pyramid_tasks/contrib/: pyramid_tm.py
sample/: README.md  sample.ini  setup.py
sample/sampleapp/: __init__.py
tests/: test_integration.py  test_settings.py  test_transaction.py  test_tweens.py
tests/contrib/: test_pyramid_tm.py
tests/pkgs/deriverapp/: __init__.py
tests/pkgs/transactionapp/: __init__.py
tests/pkgs/tweenapp/: __init__.py
tests/pkgs/venusianapp/: __init__.py
