[metadata]
name = pyramid-tasks
version = 0.3.0a1
author = Theron Luhn
author_email = theron@luhn.com
description = Bring parity to Pyramid and Celery by creating a full Pyramid application in the Celery worker and providing a request object for each task.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luhn/pyramid-tasks/
classifiers =
	Development Status :: 4 - Beta
	Framework :: Pyramid
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Programming Language :: Python
	Topic :: Software Development :: Object Brokering

[options]
packages = find:
python_requires = >=3.6
install_requires =
	celery>=4,<6
	pyramid>=1.9
	venusian>=1.0
	zope.interface>=3.8.0

[options.extras_require]
testing =
	pyramid-tm~=2.4
	pytest~=6.1
	sqlalchemy~=1.4.15
	transaction~=3.0.1
	zope.sqlalchemy~=1.4
linting =
	black==20.8b1
	flake8~=3.8.4
	isort~=5.6
